--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app"/>
-    <title>N-Notes App</title>
+    <title>Study Notes Portal</title>
     <link
       href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
       rel="stylesheet"
